@@ -1,5 +1,4 @@
-// $Id$
-// Copyright (c) 1996-2006 The Regents of the University of California. All
+// Copyright (c) 1996-99 The Regents of the University of California. All
 // Rights Reserved. Permission to use, copy, modify, and distribute this
 // software and its documentation without fee, and without a written
 // agreement is hereby granted, provided that the above copyright notice
@@ -22,1302 +21,1120 @@
 // CALIFORNIA HAS NO OBLIGATIONS TO PROVIDE MAINTENANCE, SUPPORT,
 // UPDATES, ENHANCEMENTS, OR MODIFICATIONS.
 
+// File: Project.java
+// Classes: Project
+// Original Author: not known
+
+// 16 Apr 2002: Jeremy Bennett (mail@jeremybennett.com). Extended to remove
+// include and extend relationships when deleting a use case.
+
+// 3 May 2002: Jeremy Bennett (mail@jeremybennett.com). Extended to mark the
+// project as needing saving if any object is trashed.
+
+
 package org.argouml.kernel;
 
-import java.beans.PropertyChangeEvent;
-import java.beans.PropertyVetoException;
-import java.beans.VetoableChangeListener;
-import java.beans.VetoableChangeSupport;
-import java.io.File;
-import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.Set;
-import java.util.Vector;
+import java.io.*;
+import java.util.*;
+import java.util.zip.*;
+import java.beans.*;
+import java.net.*;
 
-import org.apache.log4j.Logger;
-import org.argouml.application.ArgoVersion;
-import org.argouml.application.api.Argo;
-import org.argouml.application.api.Configuration;
-import org.argouml.model.Model;
-import org.argouml.persistence.PersistenceManager;
-import org.argouml.ui.ArgoDiagram;
-import org.argouml.ui.explorer.ExplorerEventAdaptor;
-import org.argouml.ui.targetmanager.TargetEvent;
-import org.argouml.ui.targetmanager.TargetListener;
-import org.argouml.ui.targetmanager.TargetManager;
-import org.argouml.uml.Profile;
-import org.argouml.uml.ProfileException;
-import org.argouml.uml.ProfileJava;
-import org.argouml.uml.ProjectMemberModel;
-import org.argouml.uml.cognitive.ProjectMemberTodoList;
-import org.argouml.uml.diagram.DiagramFactory;
-import org.argouml.uml.diagram.ProjectMemberDiagram;
-import org.argouml.uml.diagram.static_structure.ui.CommentEdge;
-import org.argouml.uml.diagram.static_structure.ui.UMLClassDiagram;
-import org.argouml.uml.diagram.ui.UMLDiagram;
-import org.argouml.uml.generator.GenerationPreferences;
-import org.tigris.gef.base.Diagram;
-import org.tigris.gef.presentation.Fig;
+import javax.xml.parsers.ParserConfigurationException;
 
-/**
- * The Project is a datastructure that represents the designer's
- * current project. It manages the list of diagrams and UML models.
- */
-public class Project implements java.io.Serializable, TargetListener {
+import org.xml.sax.InputSource;
+import org.xml.sax.SAXException;
 
-    /**
-     * Logger.
-     */
-    private static final Logger LOG = Logger.getLogger(Project.class);
+import ru.novosoft.uml.model_management.*;
+import ru.novosoft.uml.foundation.core.*;
+import ru.novosoft.uml.behavior.state_machines.*;
+import ru.novosoft.uml.xmi.*;
+import ru.novosoft.uml.MBase;
+import ru.novosoft.uml.behavior.common_behavior.*;
+import ru.novosoft.uml.behavior.use_cases.*;
 
+import org.tigris.gef.base.*;
+import org.tigris.gef.presentation.*;
+import org.tigris.gef.util.*;
+import org.tigris.gef.ocl.*;
+
+import org.apache.log4j.Category;
+import org.argouml.application.api.*;
+import org.argouml.cognitive.*;
+import org.argouml.cognitive.ui.*;
+import org.argouml.cognitive.critics.*;
+import org.argouml.cognitive.critics.ui.*;
+import org.argouml.cognitive.checklist.*;
+import org.argouml.model.uml.UmlHelper;
+import org.argouml.model.uml.UmlFactory;
+import org.argouml.model.uml.foundation.core.CoreHelper;
+import org.argouml.model.uml.modelmanagement.ModelManagementHelper;
+import org.argouml.uml.*;
+import org.argouml.uml.generator.*;
+import org.argouml.uml.diagram.*;
+import org.argouml.uml.diagram.ui.*;
+import org.argouml.uml.diagram.static_structure.ui.*;
+import org.argouml.uml.diagram.use_case.ui.*;
+import org.argouml.language.java.generator.*;
+import org.argouml.ui.*;
+import org.argouml.util.*;
+import org.argouml.xml.argo.*;
+import org.argouml.xml.pgml.*;
+import org.argouml.xml.xmi.XMIParser;
+import org.argouml.xml.xmi.XMIReader;
+
+
+/** A datastructure that represents the designer's current project.  A
+ *  Project consists of diagrams and UML models. */
+
+public class Project implements java.io.Serializable {
     ////////////////////////////////////////////////////////////////
     // constants
-
-    /**
-     * Default name for a project.
-     */
-    private static final String UNTITLED_FILE = "Untitled";
-
+    public static final String SEPARATOR = "/";
+    public final static String COMPRESSED_FILE_EXT = ".zargo";
+    public final static String UNCOMPRESSED_FILE_EXT = ".argo";
+    public final static String PROJECT_FILE_EXT = ".argo";
+    public final static String TEMPLATES = "/org/argouml/templates/";
+    public static String ARGO_TEE = "/org/argouml/xml/dtd/argo.tee";
+    //public final static String EMPTY_PROJ = "EmptyProject" + FILE_EXT;
+    public final static String UNTITLED_FILE = "Untitled";
+  
     ////////////////////////////////////////////////////////////////
     // static variables
-
-    /**
-     * The UID.
-     */
-    static final long serialVersionUID = 1399111233978692444L;
+    protected static OCLExpander expander = null;
 
     ////////////////////////////////////////////////////////////////
     // instance variables
 
-    /**
-     * TODO: should just be the directory to write.
-     */
-    private URI uri;
+    //public String _pathname = "";
+    //public String _filename = UNTITLED_FILE + FILE_EXT;
 
-    /* The preferences with project-scope: */
-    private String authorname;
-    private String authoremail;
-    private String description;
-    /* The ArgoUML version with which this project was last saved: */
-    private String version;
+    //needs-more-work should just be the directory to write
+    private URL _url = null;
+    protected ChangeRegistry _saveRegistry;
 
-    private ProjectSettings projectSettings;
+    public String _authorname = "";
+    public String _description = "";
+    public String _version = "";
 
-    private Vector searchpath;
+    public Vector _searchpath = new Vector();
+    public Vector _members = new Vector();
+    public String _historyFile = "";
 
-    // TODO: break into 3 main member types
-    // model, diagram and other
-    private MemberList members;
+    public Vector _models = new Vector(); //instances of MModel
+    public Vector _diagrams = new Vector(); // instances of LayerDiagram
+    protected MModel _defaultModel = null;
+    public boolean _needsSave = false;
+    protected MNamespace _curModel = null;
+    public Hashtable _definedTypes = new Hashtable(80);
+    public HashMap _UUIDRefs = null;
+    public GenerationPreferences _cgPrefs = new GenerationPreferences();
+    public transient VetoableChangeSupport _vetoSupport = null;
+   
+    protected static Category cat = 
+        Category.getInstance(org.argouml.kernel.Project.class);
+    ////////////////////////////////////////////////////////////////
+    // constructor
 
-    private String historyFile;
-
-    /**
-     * The version number of the persistence format that last
-     * saved this project.
-     */
-    private int persistenceVersion;
-
-    /**
-     * Instances of the uml model.
-     */
-    private Vector models;
-
-    /**
-     * Instances of the uml diagrams.
-     */
-    private Vector diagrams;
-    private Object defaultModel;
-    private Object currentNamespace;
-    private HashMap uuidRefs;
-    private GenerationPreferences cgPrefs;
-    private transient VetoableChangeSupport vetoSupport;
-
-    private Profile profile;
-
-    /**
-     * The active diagram, pointer to a diagram in the list with diagrams.
-     */
-    private ArgoDiagram activeDiagram;
-
-    /**
-     * Cache for the default model.
-     */
-    private HashMap defaultModelTypeCache;
-
-    private Collection trashcan = new ArrayList();
-
-    /**
-     * Constructor.
-     *
-     * @param theProjectUri Uri to read the project from.
-     */
-    public Project(URI theProjectUri) {
-        this();
-        uri = PersistenceManager.getInstance().fixUriExtension(theProjectUri);
+    public Project(File file) throws MalformedURLException, IOException {
+        this(Util.fileToURL(file));
     }
 
-    /**
-     * Constructor.
-     */
-    public Project() {
-        profile = new ProfileJava();
-        projectSettings = new ProjectSettings();
+    public Project(URL url) {
+    	this();
+        _url = Util.fixURLExtension(url, COMPRESSED_FILE_EXT);
+        _saveRegistry = new UMLChangeRegistry();
         
-        Model.getModelManagementFactory().setRootModel(null);
-
-        authorname = Configuration.getString(Argo.KEY_USER_FULLNAME);
-        authoremail = Configuration.getString(Argo.KEY_USER_EMAIL);
-        description = "";
-        // this should be moved to a ui action.
-        version = ArgoVersion.getVersion();
-
-        searchpath = new Vector();
-        members = new MemberList();
-        historyFile = "";
-        models = new Vector();
-        diagrams = new Vector();
-        cgPrefs = new GenerationPreferences();
-        defaultModelTypeCache = new HashMap();
-
-        LOG.info("making empty project with empty model");
-        try {
-            // Jaap Branderhorst 2002-12-09
-            // load the default model
-            // this is NOT the way how it should be since this makes argo
-            // depend on Java even more.
-            setDefaultModel(profile.getProfileModel());
-        } catch (ProfileException e) {
-            // TODO: how are we going to handle exceptions here?
-            // I think we need a ProjectException.
-            LOG.error("Exception setting the default profile", e);
-        }
-        addSearchPath("PROJECT_DIR");
-        TargetManager.getInstance().addTargetListener(this);
     }
 
-    /**
-     * Find the base name of this project.<p>
+    public Project() {
+        _saveRegistry = new UMLChangeRegistry();
+         // Jaap Branderhorst 2002-12-09
+        // load the default model
+        // this is NOT the way how it should be since this makes argo depend on Java even more.
+       setDefaultModel(ProfileJava.loadProfileModel());
+    }
+
+    public Project (MModel model) {
+    	this();
+        Argo.log.info("making empty project with model: "+model.getName());
+        _saveRegistry = new UMLChangeRegistry();
+		/*
+        defineType(JavaUML.VOID_TYPE);     //J.101
+        defineType(JavaUML.CHAR_TYPE);     //J.102
+        defineType(JavaUML.INT_TYPE);      //J.103
+        defineType(JavaUML.BOOLEAN_TYPE);  //J.104
+        defineType(JavaUML.BYTE_TYPE);     //J.105
+        defineType(JavaUML.LONG_TYPE);     //J.106
+        defineType(JavaUML.FLOAT_TYPE);    //J.107
+        defineType(JavaUML.DOUBLE_TYPE);   //J.108
+        defineType(JavaUML.STRING_CLASS);  //J.109
+        defineType(JavaUML.CHAR_CLASS);    //J.110
+        defineType(JavaUML.INT_CLASS);     //J.111
+        defineType(JavaUML.BOOLEAN_CLASS); //J.112
+        defineType(JavaUML.BYTE_CLASS);    //J.113
+        defineType(JavaUML.LONG_CLASS);    //J.114
+        defineType(JavaUML.FLOAT_CLASS);   //J.115
+        defineType(JavaUML.DOUBLE_CLASS);  //J.116
+
+        defineType(JavaUML.RECTANGLE_CLASS); //J.201
+        defineType(JavaUML.POINT_CLASS);     //J.202
+        defineType(JavaUML.COLOR_CLASS);     //J.203
+
+        defineType(JavaUML.VECTOR_CLASS);    //J.301
+        defineType(JavaUML.HASHTABLE_CLASS); //J.302
+        defineType(JavaUML.STACK_CLASS);     //J.303
+		*/
+        addSearchPath("PROJECT_DIR");
+
+        try {
+            addMember(new UMLClassDiagram(model));
+            addMember(new UMLUseCaseDiagram(model));
+            addMember(model);
+            setNeedsSave(false);
+        }
+        catch (PropertyVetoException pve) { }
+
+        Runnable resetStatsLater = new ResetStatsLater();
+        org.argouml.application.Main.addPostLoadAction(resetStatsLater);
+        setCurrentNamespace(model);
+        
+    }
+
+    /**   This method creates a project from the specified URL
      *
-     * This is the name minus any valid file extension.
-     *
-     * @return The name (a String).
+     *    Unlike the constructor which forces an .argo extension
+     *    This method will attempt to load a raw XMI file
+     * <P>
+     * This method can fail in several different ways. Either by throwing
+     * an exception or by having the ArgoParser.SINGLETON.getLastLoadStatus()
+     * set to not true.
+     * <P>
+     * Needs-more-work: This method NEEDS a refactoring.
      */
+    public static Project loadProject(URL url) throws IOException, Exception {
+        Project p = null;
+        String urlString = url.toString();
+        int lastDot = urlString.lastIndexOf(".");
+        String suffix = "";
+        if(lastDot >= 0) {
+            suffix = urlString.substring(lastDot).toLowerCase();
+        }
+        //
+        //    just read XMI file
+        //
+        if(suffix.equals(".xmi")) {
+            p = new Project();
+            XMIParser.SINGLETON.readModels(p,url);
+            MModel model = XMIParser.SINGLETON.getCurModel();
+            UmlHelper.getHelper().addListenersToModel(model);
+            p._UUIDRefs = XMIParser.SINGLETON.getUUIDRefs();
+            try {
+                p.addMember(model);
+                p.setNeedsSave(false);
+            }
+            catch (PropertyVetoException pve) { }
+            org.argouml.application.Main.addPostLoadAction(new ResetStatsLater());
+        }
+	
+        else if(suffix.equals(COMPRESSED_FILE_EXT)) { // normal case
+            try {
+                ZipInputStream zis = new ZipInputStream(url.openStream());
+		
+                // first read the .argo file from Zip
+                String name = zis.getNextEntry().getName();
+                while(!name.endsWith(PROJECT_FILE_EXT)) {
+                    name = zis.getNextEntry().getName();
+                }
+		
+                // the "false" means that members should not be added,
+                // we want to do this by hand from the zipped stream.
+                ArgoParser.SINGLETON.setURL(url);
+                ArgoParser.SINGLETON.readProject(zis,false);
+                p = ArgoParser.SINGLETON.getProject();
+		
+                zis.close();
+                
+            } catch (Exception e) {
+                cat.error("Oops, something went wrong in Project.loadProject ");
+                cat.error(e);
+                // yeah and now we want to have the old state of the Project back but we dont know the old state
+                // so we propagate the error
+                throw e;
+            }
+            try {
+                p.loadZippedProjectMembers(url);
+            }
+            catch (IOException e) {
+                cat.error("Project file corrupted");
+                cat.error(e);
+                throw e;
+            }
+            p.postLoad();
+        }
+	
+        else {
+            ArgoParser.SINGLETON.readProject(url);
+            p = ArgoParser.SINGLETON.getProject();
+            p.loadAllMembers();
+            p.postLoad();
+        }
+        return p;
+    }
+    
+    /**
+     * Loads a model (XMI only) from a .zargo file. BE ADVISED this method has a side
+     * effect. It sets _UUIDREFS to the model.
+     * <p>
+     * If there is a problem with the xmi file, an error is set in the
+     * ArgoParser.SINGLETON.getLastLoadStatus() field. This needs to be
+     * examined by the calling function.
+     *
+     * @param url The url with the .zargo file
+     * @return MModel The model loaded
+     * @throws IOException Thrown if the model or the .zargo file itself is corrupted in any way.
+     */
+    public MModel loadModelFromXMI(URL url) throws IOException {
+        ZipInputStream zis = new ZipInputStream(url.openStream());
+   
+        String name = zis.getNextEntry().getName();
+        while(!name.endsWith(".xmi")) {
+            name = zis.getNextEntry().getName();
+        }
+        Argo.log.info("Loading Model from "+url);
+        // 2002-07-18
+        // Jaap Branderhorst
+        // changed the loading of the projectfiles to solve hanging 
+        // of argouml if a project is corrupted. Issue 913
+        // Created xmireader with method getErrors to check if parsing went well
+        XMIReader xmiReader = null;
+        try {
+            xmiReader = new org.argouml.xml.xmi.XMIReader();
+        }
+        catch (SAXException se) {}
+        catch (ParserConfigurationException pc) {}
+        MModel mmodel = null;
+        
+        InputSource source = new InputSource(zis);
+        source.setEncoding("UTF-8");
+        try {
+        	mmodel = xmiReader.parse(new InputSource(zis));
+        }
+        catch (ClassCastException cc) {
+        	ArgoParser.SINGLETON.setLastLoadStatus(false);
+			ArgoParser.SINGLETON.setLastLoadMessage("XMI file "
+							+ url.toString()
+							+ " could not be "
+							+ "parsed.");
+        }
+        if (xmiReader.getErrors()) {
+		ArgoParser.SINGLETON.setLastLoadStatus(false);
+		ArgoParser.SINGLETON.setLastLoadMessage("XMI file "
+							+ url.toString()
+							+ " could not be "
+							+ "parsed.");
+	    }
+
+        // This should probably be inside xmiReader.parse
+        // but there is another place in this source
+        // where XMIReader is used, but it appears to be
+        // the NSUML XMIReader.  When Argo XMIReader is used
+        // consistently, it can be responsible for loading
+        // the listener.  Until then, do it here.
+        UmlHelper.getHelper().addListenersToModel(mmodel);
+
+        // if (mmodel != null && !xmiReader.getErrors()) {
+            try {
+                addMember(mmodel);
+            }
+            catch (PropertyVetoException pv) {
+                throw new IOException("The model from XMI file" + 
+                    url.toString() +
+                    "could not be added to the project.");
+            }
+	    //}
+	    //        else {
+            //throw new IOException("XMI file " + url.toString() + 
+	    //" could not be parsed.");
+	    //}
+	    
+
+        _UUIDRefs = new HashMap(xmiReader.getXMIUUIDToObjectMap());
+        return mmodel;
+    }
+
+    
+    /**
+     * Loads all the members from a zipped input stream.
+     *
+     * @throws IOException if there is something wrong with the zipped archive
+     *                     or with the model.
+     * @throws PropertyVetoException if the adding of a diagram is vetoed.
+     */
+    public void loadZippedProjectMembers(URL url) 
+	throws IOException, PropertyVetoException {
+
+     
+        loadModelFromXMI(url); // throws a IOException if things go wrong
+                               // user interface has to handle that one
+        try {
+        
+            
+            // now close again, reopen and read the Diagrams.
+
+            PGMLParser.SINGLETON.setOwnerRegistry(_UUIDRefs);
+
+            //zis.close();
+            ZipInputStream zis = new ZipInputStream(url.openStream());
+            SubInputStream sub = new SubInputStream(zis);
+
+            ZipEntry currentEntry = null;
+            while ( (currentEntry = sub.getNextEntry()) != null) {
+                if (currentEntry.getName().endsWith(".pgml")) {
+                    Argo.log.info("Now going to load "+currentEntry.getName()+" from ZipInputStream");
+
+                    // "false" means the stream shall not be closed, but it doesn't seem to matter...
+                    ArgoDiagram d = (ArgoDiagram)PGMLParser.SINGLETON.readDiagram(sub,false);
+                    addMember(d);
+                    // sub.closeEntry();
+                    Argo.log.info("Finished loading "+currentEntry.getName());
+                }
+            }
+            zis.close();
+
+	    
+        } catch (IOException e) {
+            ArgoParser.SINGLETON.setLastLoadStatus(false);
+            ArgoParser.SINGLETON.setLastLoadMessage(e.toString());
+            cat.error("Oops, something went wrong in Project.loadZippedProjectMembers() ", e);
+            throw e; 
+        }
+    }
+
+    public static Project makeEmptyProject() {
+        Argo.log.info("making empty project");
+
+        MModel m1 = UmlFactory.getFactory().getModelManagement().createModel();
+        m1.setName("untitledModel");
+        Project p = new Project(m1);
+
+
+        p.addSearchPath("PROJECT_DIR");
+
+       
+
+        return p;
+    }
+
+    ////////////////////////////////////////////////////////////////
+    // accessors
+    // needs-more-work
+
+    /**
+     * Added Eugenio's patches to load 0.8.1 projects.
+     */  
     public String getBaseName() {
         String n = getName();
-        n = PersistenceManager.getInstance().getBaseName(n);
+	
+        if (n.endsWith(COMPRESSED_FILE_EXT)) {
+            return n.substring(0, n.length() - COMPRESSED_FILE_EXT.length());
+        }
+        if (n.endsWith(UNCOMPRESSED_FILE_EXT)) {
+            return n.substring(0, n.length() - UNCOMPRESSED_FILE_EXT.length());
+        }
         return n;
     }
 
-    /**
-     * Get the project name. This is just the name part of the full filename.
-     * @return the name of the project
-     */
     public String getName() {
-        // TODO: maybe separate name
-        if (uri == null) {
-            return UNTITLED_FILE;
-        }
-        return new File(uri).getName();
+        // needs-more-work: maybe separate name
+        if (_url == null) return UNTITLED_FILE;
+        String name = _url.getFile();
+        int i = name.lastIndexOf('/');
+        return name.substring(i+1);
     }
 
-    /**
-     * Set the project URI.
-     *
-     * @param n The new URI (as a String).
-     * @throws URISyntaxException if the argument cannot be converted to
-     *         an URI.
-     */
-    public void setName(String n)
-        throws URISyntaxException {
+    public void setName(String n) throws PropertyVetoException, MalformedURLException {
         String s = "";
-        if (getURI() != null) {
-            s = getURI().toString();
-        }
+        if (getURL() != null) s = getURL().toString();
         s = s.substring(0, s.lastIndexOf("/") + 1) + n;
-        setURI(new URI(s));
+        setURL(new URL(s));
     }
 
-    /**
-     * Get the URI for this project.
-     *
-     * @return The URI.
-     */
-    public URI getURI() {
-        return uri;
-    }
+    public URL getURL() { return _url; }
 
-    /**
-     * Set the URI for this project.
-     *
-     * @param theUri The URI to set.
-     */
-    public void setURI(URI theUri) {
-        if (theUri != null) {
-            theUri = PersistenceManager.getInstance().fixUriExtension(theUri);
+    public void setURL(URL url) throws PropertyVetoException {
+        if (url != null) {
+            url = Util.fixURLExtension(url, COMPRESSED_FILE_EXT);
         }
+        getVetoSupport().fireVetoableChange("url", _url, url);
 
-        if (LOG.isDebugEnabled()) {
-            LOG.debug("Setting project URI from \"" + uri
-                      + "\" to \"" + theUri + "\".");
+        cat.debug ("Setting project URL from \"" + _url + "\" to \"" + url + "\".");
+    
+        _url = url;
+    }
+
+    //   public void setFilename(String path, String name) throws PropertyVetoException {
+    //     if (!(name.endsWith(FILE_EXT))) name += FILE_EXT;
+    //     if (!(path.endsWith("/"))) path += "/";
+    //     URL url = new URL("file://" + path + name);
+    //     getVetoSupport().fireVetoableChange("url", _url, url);
+    //     _url = url;
+    //   }
+
+    public void setFile(File file) throws PropertyVetoException {
+        try {
+            URL url = Util.fileToURL(file);
+            getVetoSupport().fireVetoableChange("url", _url, url);
+      
+            cat.debug ("Setting project file name from \"" + _url + "\" to \"" + url + "\".");
+      
+            _url = url;
         }
-
-        uri = theUri;
-    }
-
-    /**
-     * Set the project file.
-     *
-     * This only works if it is possible to convert the File to an uri.
-     *
-     * @param file File to set the project to.
-     */
-    public void setFile(File file) {
-        URI theProjectUri = file.toURI();
-
-        if (LOG.isDebugEnabled()) {
-            LOG.debug("Setting project file name from \""
-                      + uri
-                      + "\" to \""
-                      + theProjectUri
-                      + "\".");
+        catch (MalformedURLException murle) {
+            cat.error("problem in setFile:" + file, murle);
         }
-
-        uri = theProjectUri;
-    }
-
-    /**
-     * @return the search path
-     */
-    public Vector getSearchPath() {
-        return searchpath;
-    }
-
-    /**
-     * @param searchPathElement the element to be added to the searchpath
-     */
-    public void addSearchPath(String searchPathElement) {
-        if (!this.searchpath.contains(searchPathElement)) {
-            this.searchpath.addElement(searchPathElement);
+        catch (IOException ex) {
+            cat.error("problem in setFile:" + file, ex);
+            
         }
     }
 
-    /**
-     * Get all members of the project.
-     *
-     * @return a Vector with all members.
-     */
-    public MemberList getMembers() {
-        LOG.info("Getting the members there are " + members.size());
-        return members;
+    public Vector getSearchPath() { return _searchpath; }
+    public void addSearchPath(String searchpath) {
+        _searchpath.addElement(searchpath);
     }
 
-    /**
-     * @param d the diagram
-     */
-    private void addDiagramMember(ArgoDiagram d) {
+    public URL findMemberURLInSearchPath(String name) {
+        //ignore searchpath, just find it relative to the project file
+        String u = "";
+        if (getURL() != null) u = getURL().toString();
+        u = u.substring(0, u.lastIndexOf("/") + 1);
+        URL url = null;
+        try { url = new URL(u + name); }
+        catch (MalformedURLException murle) {
+            cat.error("MalformedURLException in findMemberURLInSearchPath:" + u + name, murle);
+        }
+        return url;
+    }
+
+    public Vector getMembers() { return _members; }
+
+    public void addMember(String name, String type) {
+        //try {
+        URL memberURL = findMemberURLInSearchPath(name);
+        if (memberURL == null) {
+            cat.debug("null memberURL");
+            return;
+        }
+        else cat.debug("memberURL = " + memberURL);
+        ProjectMember pm = findMemberByName(name);
+        if (pm != null) return;
+        if ("pgml".equals(type))
+            pm = new ProjectMemberDiagram(name, this);
+        else if ("xmi".equals(type))
+            pm = new ProjectMemberModel(name, this);
+        else throw new RuntimeException("Unknown member type " + type);
+        _members.addElement(pm);
+        //} catch (java.net.MalformedURLException e) {
+        //throw new UnexpectedException(e);
+        //}
+    }
+
+    public void addMember(ArgoDiagram d) throws PropertyVetoException {
         ProjectMember pm = new ProjectMemberDiagram(d, this);
         addDiagram(d);
         // if diagram added successfully, add the member too
-        members.add(pm);
+        _members.addElement(pm);
     }
 
-    /**
-     * @param pm the member to be added
-     */
-    private void addTodoMember(ProjectMemberTodoList pm) {
-        // Adding a todo member removes any existing one.
-        members.add(pm);
-        LOG.info("Added todo member, there are now " + members.size());
-    }
-
-    /**
-     * @param m the member to be added
-     */
-    public void addMember(Object m) {
-
-        if (m == null) {
-            throw new IllegalArgumentException(
-                    "A model member must be suppleid");
-        } else if (m instanceof ArgoDiagram) {
-            LOG.info("Adding diagram member");
-            addDiagramMember((ArgoDiagram) m);
-        } else if (m instanceof ProjectMemberTodoList) {
-            LOG.info("Adding todo member");
-            addTodoMember((ProjectMemberTodoList) m);
-        } else if (Model.getFacade().isAModel(m)) {
-            LOG.info("Adding model member");
-            addModelMember(m);
-        } else {
-            throw new IllegalArgumentException(
-                    "The member must be a UML model todo member or diagram."
-                    + "It is " + m.getClass().getName());
-        }
-        LOG.info("There are now " + members.size() + " members");
-    }
-
-    /**
-     * @param m the model
-     */
-    private void addModelMember(Object m) {
-
+    public void addMember(MModel m) throws PropertyVetoException {
+        Iterator iter = _members.iterator();
+        Object currentMember = null;
         boolean memberFound = false;
-        Object currentMember =
-            members.getMember(ProjectMemberModel.class);
-        if (currentMember != null) {
-            Object currentModel =
-                ((ProjectMemberModel) currentMember).getModel();
-            if (currentModel == m) {
-                memberFound = true;
+        while(iter.hasNext()) {
+            currentMember = iter.next();
+            if(currentMember instanceof ProjectMemberModel) {
+                MModel currentModel = ((ProjectMemberModel) currentMember).getModel();
+                if(currentModel == m) {
+                    memberFound = true;
+                    break;
+                }
             }
         }
-
-        if (!memberFound) {
-            if (!models.contains(m)) {
+        if(!memberFound) {
+            if(!_models.contains(m)) {
                 addModel(m);
             }
             // got past the veto, add the member
             ProjectMember pm = new ProjectMemberModel(m, this);
-            LOG.info("Adding model member to start of member list");
-            members.add(pm);
-        } else {
-            LOG.info("Attempted to load 2 models");
-            throw new IllegalArgumentException(
-                    "Attempted to load 2 models");
+            _members.addElement(pm);
         }
     }
 
-    /**
-     * @param model a namespace
-     */
-    public void addModel(Object model) {
-
-        if (!Model.getFacade().isANamespace(model)) {
-            throw new IllegalArgumentException();
-	}
-
+    public void addModel(MNamespace m) throws PropertyVetoException {
         // fire indeterminate change to avoid copying vector
-        if (!models.contains(model)) {
-            models.addElement(model);
-        }
-        setCurrentNamespace(model);
-        ProjectManager.getManager().setSaveEnabled(true);
+        getVetoSupport().fireVetoableChange("Models", _models, null);
+        if (! _models.contains(m)) _models.addElement(m);
+        setCurrentNamespace(m);
+        setNeedsSave(true);
     }
 
     /**
      * Removes a project member diagram completely from the project.
-     * @param d the ArgoDiagram
+     * @param d
      */
+
     protected void removeProjectMemberDiagram(ArgoDiagram d) {
-        if (activeDiagram == d) {
-            ArgoDiagram defaultDiagram;
-            if (diagrams.size() == 1) {
-                // We're deleting the last diagram so lets create a new one
-                // TODO: Once we go MDI we won't need this.
-                Object treeRoot = 
-                    Model.getModelManagementFactory().getRootModel();
-                defaultDiagram =
-                    DiagramFactory.getInstance()
-                        .createDiagram(UMLClassDiagram.class, treeRoot, null);
-                addMember(defaultDiagram);
-            } else {
-                // Make the topmost diagram (that is not the one being deleted)
-                // current.
-                defaultDiagram = (ArgoDiagram) diagrams.get(0);
-                if (defaultDiagram == d) {
-                    defaultDiagram = (ArgoDiagram) diagrams.get(1);
+    	try {
+        	removeDiagram(d);
+    	} catch (PropertyVetoException ve) {}
+        // should remove the corresponding ProjectMemberDiagram not the ArgoDiagram from the members
+        
+        // _members.removeElement(d);
+        // ehhh lets remove the diagram really and remove it from its corresponding projectmember too
+        Iterator it = _members.iterator();
+        while (it.hasNext()) {
+        	Object obj = it.next();
+        	if (obj instanceof ProjectMemberDiagram) {
+        		ProjectMemberDiagram pmd = (ProjectMemberDiagram)obj;
+        		if (pmd.getDiagram() == d) {
+        			_members.removeElement(pmd);
+        			break;
+        		}
+        	}
+        }
+    }
+
+    public ProjectMember findMemberByName(String name) {
+        cat.debug ("findMemberByName called for \"" + name + "\".");
+        for (int i = 0; i < _members.size(); i++) {
+            ProjectMember pm = (ProjectMember) _members.elementAt(i);
+            if (name.equals(pm.getPlainName())) return pm;
+        }
+        cat.debug ("Member \"" + name + "\" not found.");
+        return null;
+    }
+
+    public static Project load(URL url) throws IOException, org.xml.sax.SAXException {
+        Dbg.log("org.argouml.kernel.Project", "Reading " + url);
+        ArgoParser.SINGLETON.readProject(url);
+        Project p = ArgoParser.SINGLETON.getProject();
+        p.loadAllMembers();
+        p.postLoad();
+        Dbg.log("org.argouml.kernel.Project", "Done reading " + url);
+        return p;
+    }
+
+    //   public void loadAllMembers() {
+    //     for (java.util.Enumeration enum = members.elements(); enum.hasMoreElements(); ) {
+    //       ((ProjectMember) enum.nextElement()).load();
+    //     }
+    //   }
+
+    //   public static Project loadEmpty() throws IOException, org.xml.sax.SAXException {
+    //     URL emptyURL = Project.class.getResource(TEMPLATES + EMPTY_PROJ);
+    //     if (emptyURL == null)
+    //       throw new IOException("Unable to get empty project resource.");
+    //     return load(emptyURL);
+    //   }
+
+    public void loadMembersOfType(String type) {
+        if (type == null) return;
+        java.util.Enumeration enum = getMembers().elements();
+        try {
+            while (enum.hasMoreElements()) {
+                ProjectMember pm = (ProjectMember) enum.nextElement();
+                if (type.equalsIgnoreCase(pm.getType())) pm.load();
+            }
+        }
+        catch (IOException ignore) {
+            cat.error("IOException in makeEmptyProject", ignore);
+        }
+        catch (org.xml.sax.SAXException ignore) {
+            cat.error("SAXException in makeEmptyProject", ignore);
+        }
+    }
+
+
+    public void loadAllMembers() {
+        loadMembersOfType("xmi");
+        loadMembersOfType("argo");
+        loadMembersOfType("pgml");
+        loadMembersOfType("text");
+        loadMembersOfType("html");
+    }
+
+    //   public void loadMembersOfType(String type) {
+    //     int size = _members.size();
+    //     for (int i = 0; i < size; i++) {
+    //       ProjectMember pm = (ProjectMember) _members.elementAt(i);
+    //       if (pm.type != null && pm.type.equalsIgnoreCase(type))
+    // 	pm.load();
+    //     }
+    //   }
+  
+    /**
+     * There are known issues with saving, particularly
+     * losing the xmi at save time. see issue
+     * http://argouml.tigris.org/issues/show_bug.cgi?id=410
+     *
+     * It is also being considered to save out individual
+     * xmi's from individuals diagrams to make
+     * it easier to modularize the output of Argo.
+     */
+    public void save(boolean overwrite, File file) throws IOException, Exception {
+        if (expander == null) {
+            java.util.Hashtable templates = TemplateReader.readFile(ARGO_TEE);
+            expander = new OCLExpander(templates);
+        }
+    
+        preSave();
+        
+        ZipOutputStream stream = new ZipOutputStream(new FileOutputStream(file));
+        BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(stream, "UTF-8"));
+ 
+        ZipEntry zipEntry = new ZipEntry (getBaseName() + UNCOMPRESSED_FILE_EXT);
+        stream.putNextEntry (zipEntry);
+        expander.expand (writer, this, "", "");
+        writer.flush();
+        stream.closeEntry();
+        
+        String path = file.getParent();
+        Argo.log.info ("Dir ==" + path);
+        int size = _members.size();
+    
+        try {
+	    // First we save all objects that are not XMI objects i.e. the
+	    // diagrams (first for loop).
+	    // The we save all XMI objects (second for loop).
+	    // This is because order is important on saving.
+            for (int i = 0; i < size; i++) {
+                ProjectMember p = (ProjectMember) _members.elementAt(i);
+                if (!(p.getType().equalsIgnoreCase("xmi"))){
+                    Argo.log.info("Saving member of type: " + ((ProjectMember)_members.elementAt(i)).getType());
+                    stream.putNextEntry(new ZipEntry(p.getName()));
+                    p.save(path,overwrite,writer);
+                    writer.flush();
+                    stream.closeEntry();
                 }
             }
-            activeDiagram = defaultDiagram;
-            TargetManager.getInstance().setTarget(defaultDiagram);
-        }
 
-        removeDiagram(d);
-        members.remove(d);
-        d.remove();
-        ProjectManager.getManager().setSaveEnabled(true);
-    }
-
-
-    /**
-     * Get the author name.
-     *
-     * @return The author name.
-     */
-    public String getAuthorname() {
-        return authorname;
-    }
-
-    /**
-     * Set the author name.
-     *
-     * @param s The new author name.
-     */
-    public void setAuthorname(String s) {
-        authorname = s;
-    }
-
-    /**
-     * Get the author name.
-     *
-     * @return The author name.
-     */
-    public String getAuthoremail() {
-        return authoremail;
-    }
-
-    /**
-     * Set the author name.
-     *
-     * @param s The new author name.
-     */
-    public void setAuthoremail(String s) {
-        authoremail = s;
-    }
-
-    /**
-     * Get the version.
-     *
-     * @return the version.
-     */
-    public String getVersion() {
-        return version;
-    }
-
-    /**
-     * Set the new version.
-     * @param s The new version.
-     */
-    public void setVersion(String s) {
-        version = s;
-    }
-
-    /**
-     * Get the description.
-     *
-     * @return the description.
-     */
-    public String getDescription() {
-        return description;
-    }
-
-    /**
-     * Set a new description.
-     *
-     * @param s The new description.
-     */
-    public void setDescription(String s) {
-        description = s;
-    }
-
-    /**
-     * Get the history file.
-     *
-     * @return The history file.
-     */
-    public String getHistoryFile() {
-        return historyFile;
-    }
-
-    /**
-     * Set the history file.
-     *
-     * @param s The new history file.
-     */
-    public void setHistoryFile(String s) {
-        historyFile = s;
-    }
-
-    /**
-     * Returns all models defined by the user. I.e. this does not return the
-     * default model but all other models.
-     *
-     * @return A Vector of all user defined models.
-     */
-    public Vector getUserDefinedModels() {
-        return models;
-    }
-
-    /**
-     * Returns all models, including the default model (default.xmi).
-     *
-     * @return A Collection containing all models.
-     */
-    public Collection getModels() {
-        Set ret = new HashSet();
-        ret.addAll(models);
-        ret.add(defaultModel);
-        return ret;
-    }
-
-    /**
-     * Return the model.<p>
-     *
-     * If there isn't exactly one model, <code>null</code> is returned.
-     *
-     * @return the model.
-     */
-    public Object getModel() {
-        if (models.size() != 1) {
-            return null;
-        }
-        return models.elementAt(0);
-    }
-
-    /**
-     * Searches for a type/classifier with name s. If the type is not found,
-     * a new type is created and added to the current namespace.
-     * @param s the name of the type/classifier to be found
-     * @return MClassifier
-     */
-    public Object findType(String s) {
-        return findType(s, true);
-    }
-
-    /**
-     * Searches for a type/classifier with name s. If defineNew is
-     * true, a new type is defined if the type/classifier is not
-     * found. The newly created type is added to the currentNamespace
-     * and given the name s.
-     * @param s the name of the type/classifier to be found
-     * @param defineNew if true, define a new one
-     * @return MClassifier the found classifier
-     */
-    public Object findType(String s, boolean defineNew) {
-        if (s != null) {
-            s = s.trim();
-        }
-        if (s == null || s.length() == 0) {
-            return null;
-        }
-        Object cls = null;
-        int numModels = models.size();
-        for (int i = 0; i < numModels; i++) {
-            cls = findTypeInModel(s, models.elementAt(i));
-            if (cls != null) {
-                return cls;
+            for (int i = 0; i < size; i++) {
+                ProjectMember p = (ProjectMember) _members.elementAt(i);
+                if (p.getType().equalsIgnoreCase("xmi")) {
+                    Argo.log.info("Saving member of type: " + ((ProjectMember)_members.elementAt(i)).getType());
+                    stream.putNextEntry(new ZipEntry(p.getName()));
+                    p.save(path,overwrite,writer);
+                }
             }
+
+        } catch (IOException e) {
+            cat.debug("hat nicht geklappt: "+e);
+            e.printStackTrace();
         }
-        cls = findTypeInModel(s, defaultModel);
-        // hey, now we should move it to the model the user is working in
-        if (cls != null) {
-            cls =
-                Model.getModelManagementHelper()
-                	.getCorrespondingElement(cls, getRoot());
+    
+        //needs-more-work: in future allow independent saving
+        writer.close();
+        // zos.close();
+    
+        postSave();
+
+        try {
+            setFile(file);
+        } catch (PropertyVetoException ex) {}
+    }
+
+    public String getAuthorname() { return _authorname; }
+    public void setAuthorname(String s) { _authorname = s; }
+
+    public String getVersion() { return _version; }
+    public void setVersion(String s) { _version = s; }
+
+    public String getDescription() { return _description; }
+    public void setDescription(String s) { _description = s; }
+
+    public String getHistoryFile() { return _historyFile; }
+    public void setHistoryFile(String s) { _historyFile = s; }
+
+    public void setNeedsSave(boolean newValue) { _saveRegistry.setChangeFlag(newValue); }
+    public boolean needsSave() { return _saveRegistry.hasChanged(); }
+
+    public Vector getModels() { return _models; }
+
+	public MNamespace getModel() {
+		if (_models.size() != 1) return null;
+		return (MNamespace)_models.elementAt(0);
+	}
+    //   public void addModel(MNamespace m) throws PropertyVetoException {
+    //     getVetoSupport().fireVetoableChange("Models", _models, m);
+    //     _models.addElement(m);
+    //     setCurrentNamespace(m);
+    //     _needsSave = true;
+    //   }
+
+    public Vector getDefinedTypesVector() { return new Vector(_definedTypes.values()); }
+    public Hashtable getDefinedTypes() { return _definedTypes; }
+    public void setDefinedTypes(Hashtable h) { _definedTypes = h; }
+    public void defineType(MClassifier cls) {
+        //needs-more-work: should take namespaces into account!
+        // this is a hack because names are not always being assigned under argo-nsuml branch - JH
+        String name = cls.getName();
+        if (name == null) name = "anon";
+        _definedTypes.put(name,  cls);
+    }
+    public MClassifier findType(String s) {
+        if (s != null) s = s.trim();
+        if (s == null || s.length()==0) return null;
+        MClassifier cls = null;
+        int numModels = _models.size();
+        for (int i = 0; i < numModels; i++) {
+            cls = findTypeInModel(s, (MNamespace) _models.elementAt(i));
+            if (cls != null) return cls;
         }
-        if (cls == null && defineNew) {
-            LOG.debug("new Type defined!");
-            cls =
-                Model.getCoreFactory().buildClass(getCurrentNamespace());
-            Model.getCoreHelper().setName(cls, s);
+        cls = findTypeInModel(s, _defaultModel);
+        if (cls != null ) return cls;
+        cls = (MClassifier) _definedTypes.get(s);
+        if (cls == null) {
+            cat.debug("new Type defined!");
+            cls = UmlFactory.getFactory().getCore().buildClass();
+            cls.setName(s);
         }
+        if (cls.getNamespace() == null)
+            cls.setNamespace(getCurrentNamespace());
         return cls;
     }
-
+    
     /**
-     * Finds all figs on the diagrams for some project member,
-     * including the figs containing the member (so for some
-     * operation, the containing figclass is returned).
-     *
-     * @param member The member we are looking for.
-     *              This can be a model element object but also another object.
+     * Finds all figs on the diagrams for some project member, including the 
+     * figs containing the member (so for some operation, the containing figclass
+     * is returned).
+     * @param member The member we are looking for. This can be a NSUML object but also another object.
      * @return Collection The collection with the figs.
      */
     public Collection findFigsForMember(Object member) {
-        Collection figs = new ArrayList();
-        Iterator it = diagrams.iterator();
-        while (it.hasNext()) {
-            ArgoDiagram diagram = (ArgoDiagram) it.next();
-            Object fig = diagram.getContainingFig(member);
-            if (fig != null) {
-                figs.add(fig);
-            }
-        }
-        return figs;
-    }
-
-    /**
-     * Returns a list with all figs for some UML object on all diagrams.
-     *
-     * @param obj the given UML object
-     * @return List the list of figs
-     */
-    public Collection findAllPresentationsFor(Object obj) {
-        Collection figs = new ArrayList();
-        Iterator it = diagrams.iterator();
-        while (it.hasNext()) {
-            Diagram diagram = (Diagram) it.next();
-            Fig aFig = diagram.presentationFor(obj);
-            if (aFig != null) {
-                figs.add(aFig);
-            }
-        }
-        return figs;
-    }
-
-    /**
-     * Finds a classifier with a certain name.<p>
-     *
-     * Will only return first classifier with the matching name.
-     *
-     * @param s is short name.
-     * @param ns Namespace where we do the search.
-     * @return the found classifier (or <code>null</code> if not found).
-     */
-    public Object findTypeInModel(String s, Object ns) {
-
-        if (!Model.getFacade().isANamespace(ns)) {
-            throw new IllegalArgumentException(
-                    "Looking for the classifier " + s
-                    + " in a non-namespace object of " + ns
-                    + ". A namespace was expected.");
+    	Collection figs = new ArrayList();
+    	Iterator it = getDiagrams().iterator();
+    	while(it.hasNext()) {
+    		ArgoDiagram diagram = (ArgoDiagram)it.next();
+    		Fig fig = diagram.getContainingFig(member);
+    		if (fig != null) {
+    			figs.add(fig);
+    		}
     	}
-
-        Collection allClassifiers =
-            Model.getModelManagementHelper()
-	        .getAllModelElementsOfKind(ns,
-	                Model.getMetaTypes().getClassifier());
-
-        Object[] classifiers = allClassifiers.toArray();
-        Object classifier = null;
-
-        for (int i = 0; i < classifiers.length; i++) {
-
-            classifier = classifiers[i];
-            if (Model.getFacade().getName(classifier) != null
-            		&& Model.getFacade().getName(classifier).equals(s)) {
-                return classifier;
-            }
-        }
-
-        return null;
+    	return figs;
     }
+    
+	public MClassifier findTypeInModel(String s, MNamespace ns) {
+		cat.debug("Looking for type "+s+" in Namespace "+ns.getName());
+		// s is short name
+		// will only return first found element
+		Collection allClassifiers = ModelManagementHelper.getHelper().getAllModelElementsOfKind(ns, MClassifier.class);
+		Iterator it = allClassifiers.iterator();
+		while (it.hasNext()) {
+			MClassifier classifier = (MClassifier)it.next();
+			if (classifier.getName() != null && classifier.getName().equals(s)) return classifier;
+		}
+		return null;
+	}
 
-    /**
-     * @param m the namespace
-     */
-    public void setCurrentNamespace(Object m) {
+    public void setCurrentNamespace(MNamespace m) { _curModel = m; }
+    public MNamespace getCurrentNamespace() { return _curModel; }
 
-        if (m != null && !Model.getFacade().isANamespace(m)) {
-            throw new IllegalArgumentException();
-    	}
-
-        currentNamespace = m;
-    }
-
-    /**
-     * @return the namespace
-     */
-    public Object getCurrentNamespace() {
-        return currentNamespace;
-    }
-
-    /**
-     * @return the diagrams
-     */
-    public Vector getDiagrams() {
-        return diagrams;
-    }
-
-    /**
-     * Get the number of diagrams in this project.
-     * Used by argo2.tee!!
-     * @return the number of diagrams in this project.
-     */
-    public int getDiagramCount() {
-        return diagrams.size();
-    }
-
-    /**
-     * Finds a diagram with a specific name or UID.
-     *
-     * @return the diagram object (if found). Otherwize null.
-     * @param name is the name to search for.
-     */
-    public ArgoDiagram getDiagram(String name) {
-        Iterator it = diagrams.iterator();
-        while (it.hasNext()) {
-            ArgoDiagram ad = (ArgoDiagram) it.next();
-            if (ad.getName() != null && ad.getName().equals(name)) {
-                return ad;
-            }
-            if (ad.getItemUID() != null
-                    && ad.getItemUID().toString().equals(name)) {
-                return ad;
-            }
-        }
-        return null;
-    }
-
-    /**
-     * @param d the diagram to be added
-     */
-    public void addDiagram(ArgoDiagram d) {
+    public Vector getDiagrams() { return _diagrams; }
+    public void addDiagram(ArgoDiagram d) throws PropertyVetoException {
         // send indeterminate new value instead of making copy of vector
-        diagrams.addElement(d);
-        d.addVetoableChangeListener(new Vcl());
-        ProjectManager.getManager().setSaveEnabled(true);
+        getVetoSupport().fireVetoableChange("Diagrams", _diagrams, null);
+        _diagrams.addElement(d);
+        d.addChangeRegistryAsListener( _saveRegistry );
+        setNeedsSave(true);
+    }
+    
+    /**
+     * Removes a diagram from the list with diagrams. 
+     * Removes (hopefully) the event listeners for this diagram.
+     * Does not remove the diagram from the project members. This should not be called
+     * directly. Use moveToTrash if you want to remove a diagram.
+     * @param d
+     * @throws PropertyVetoException
+     */
+    protected void removeDiagram(ArgoDiagram d) throws PropertyVetoException {
+        getVetoSupport().fireVetoableChange("Diagrams", _diagrams, null);
+        _diagrams.removeElement(d);
+        d.removeChangeRegistryAsListener( _saveRegistry );
+        setNeedsSave(true);
     }
 
-    /**
-     * Removes a diagram from the list with diagrams.
-     *
-     * Removes (hopefully) the event listeners for this diagram.  Does
-     * not remove the diagram from the project members. This should
-     * not be called directly. Use moveToTrash if you want to remove a
-     * diagram.
-     *
-     * @param d the ArgoDiagram
-     */
-    protected void removeDiagram(ArgoDiagram d) {
-        d.removeVetoableChangeListener(new Vcl());
-        diagrams.removeElement(d);
-        if (d instanceof UMLDiagram) {
-            /* If this is a UML diagram, then remove the dependent
-             * modelelements, such as the statemachine
-             * for a statechartdiagram.
-             */
-            Object o = ((UMLDiagram) d).getDependentElement();
-            if (o != null) {
-                moveToTrash(o);
-            }
-        }
-    }
-
-    /**
-     * Listener to events from the Diagram class. <p>
-     *
-     * Purpose: changing the name of a diagram shall set the need save flag.
-     *
-     * @author mvw@tigris.org
-     */
-    private static class Vcl implements VetoableChangeListener {
-        /**
-         * @see java.beans.VetoableChangeListener#vetoableChange(java.beans.PropertyChangeEvent)
-         */
-        public void vetoableChange(PropertyChangeEvent evt)
-            throws PropertyVetoException {
-            if (evt.getPropertyName().equals("name")) {
-                ProjectManager.getManager().setSaveEnabled(true);
-            }
-        }
-    }
-
-    /**
-     * @param me the given modelelement
-     * @return the total number of presentation
-     *         for the given modelelement in the project
-     */
-    public int getPresentationCountFor(Object me) {
-
-        if (!Model.getFacade().isAModelElement(me)) {
-            throw new IllegalArgumentException();
-    	}
-
+    public int getPresentationCountFor(MModelElement me) {
         int presentations = 0;
-        int size = diagrams.size();
+        int size = _diagrams.size();
         for (int i = 0; i < size; i++) {
-            Diagram d = (Diagram) diagrams.elementAt(i);
+            Diagram d = (Diagram) _diagrams.elementAt(i);
             presentations += d.getLayer().presentationCountFor(me);
         }
         return presentations;
     }
 
-    /**
-     * @return an initial target, in casu a diagram or a model
-     */
     public Object getInitialTarget() {
-        if (diagrams.size() > 0) {
-            return diagrams.elementAt(0);
-        }
-        if (models.size() > 0) {
-            return models.elementAt(0);
-        }
+        if (_diagrams.size() > 0) return _diagrams.elementAt(0);
+        if (_models.size() > 0) return _models.elementAt(0);
         return null;
     }
 
-
-    /**
-     * @param cgp the generation preferences
-     */
-    public void setGenerationPrefs(GenerationPreferences cgp) {
-        cgPrefs = cgp;
-    }
-
-    /**
-     * @return the generation preferences
-     */
-    public GenerationPreferences getGenerationPrefs() {
-        return cgPrefs;
-    }
+    public void setGenerationPrefs(GenerationPreferences cgp) { _cgPrefs = cgp; }
+    public GenerationPreferences getGenerationPrefs() { return _cgPrefs; }
 
     ////////////////////////////////////////////////////////////////
     // event handling
 
-    /**
-     * @return the VetoableChangeSupport
-     */
+    public void addVetoableChangeListener(VetoableChangeListener l) {
+        getVetoSupport().removeVetoableChangeListener(l);
+        getVetoSupport().addVetoableChangeListener(l);
+    }
+
+    public void removeVetoableChangeListener(VetoableChangeListener l) {
+        getVetoSupport().removeVetoableChangeListener(l);
+    }
+
     public VetoableChangeSupport getVetoSupport() {
-        if (vetoSupport == null) {
-            vetoSupport = new VetoableChangeSupport(this);
-        }
-        return vetoSupport;
+        if (_vetoSupport == null) _vetoSupport = new VetoableChangeSupport(this);
+        return _vetoSupport;
     }
 
-    /**
-     * This is executed before a save.
-     */
     public void preSave() {
-        for (int i = 0; i < diagrams.size(); i++) {
-            ((Diagram) diagrams.elementAt(i)).preSave();
-        }
-        // TODO: is preSave needed for models?
+        for (int i = 0; i < _diagrams.size(); i++)
+            ((Diagram)_diagrams.elementAt(i)).preSave();
+        // needs-more-work: is preSave needed for models?
     }
 
-    /**
-     * This is execcuted after a save.
-     */
     public void postSave() {
-        for (int i = 0; i < diagrams.size(); i++) {
-            ((Diagram) diagrams.elementAt(i)).postSave();
-        }
-        // TODO: is postSave needed for models?
-        ProjectManager.getManager().setSaveEnabled(true);
+        for (int i = 0; i < _diagrams.size(); i++)
+            ((Diagram)_diagrams.elementAt(i)).postSave();
+        // needs-more-work: is postSave needed for models?
+        setNeedsSave(false);
+    }
+
+    public void postLoad() {
+        for (int i = 0; i < _diagrams.size(); i++)
+            ((Diagram)_diagrams.elementAt(i)).postLoad();
+        // needs-more-work: is postLoad needed for models?
+        setNeedsSave(false);
+        // we don't need this HashMap anymore so free up the memory
+        _UUIDRefs = null;
     }
 
     /**
-     * This is executed after a load.
+     * Moves some object to trash. This mechanisme must be rethought since it only
+     * deletes an object completely from the project
+     * @param obj The object to be deleted
+     * @see org.argouml.kernel.Project#trashInternal
      */
-    public void postLoad() {
-        for (int i = 0; i < diagrams.size(); i++) {
-            ((Diagram) diagrams.elementAt(i)).postLoad();
-        }
-        // issue 1725: the root is not set, which leads to problems
-        // with displaying prop panels
-        Object model = getModel();
+    ////////////////////////////////////////////////////////////////
+    // trash related methos
 
-        LOG.info("Setting root model to " + model);
+    // Attention: whole Trash mechanism should be rethought concerning nsuml
+    public void moveToTrash(Object obj) {
+        if (Trash.SINGLETON.contains(obj)) return;
+        trashInternal(obj);
 
-        setRoot(model);
+        /* old version
+           if (Trash.SINGLETON.contains(obj)) return;
+           Vector alsoTrash = null;
+           if (obj instanceof MModelElement)
+           alsoTrash = ((MModelElementImpl)obj).alsoTrash();
+           trashInternal(obj);
+           if (alsoTrash != null) {
+           int numTrash = alsoTrash.size();
+           for (int i = 0; i < numTrash; i++)
+           moveToTrash(alsoTrash.elementAt(i));
+           }
+        */
 
-        ProjectManager.getManager().setSaveEnabled(true);
-        // we don't need this HashMap anymore so free up the memory
-        uuidRefs = null;
+
+    }
+
+    /**
+     * Removes some object from the project. Does not update GUI since this method only
+     * handles project management.
+     * @param obj
+     */
+    // Attention: whole Trash mechanism should be rethought concerning nsuml
+
+    // Jeremy Bennett. Note that at present these are all if, not
+    // else-if. Rather than make a big change, I've just explicitly dealt with
+    // the case where we have a use case that is not classifier.
+
+    protected void trashInternal(Object obj) {
+    	boolean needSave = false;
+    	
+    	if (obj instanceof MBase) { // an object that can be represented
+    		ProjectBrowser.TheInstance.getEditorPane().removePresentationFor(obj, getDiagrams());
+                UmlFactory.getFactory().delete((MBase)obj);
+    		if (_members.contains(obj)) {
+    			_members.remove(obj);
+    		}
+    		if (_models.contains(obj)) {
+    			_models.remove(obj);
+    		}
+    		needSave = true;
+    	} else {
+    		if (obj instanceof ArgoDiagram) {
+    			removeProjectMemberDiagram((ArgoDiagram)obj);
+    			needSave = true;
+    		}
+    		if (obj instanceof Fig) {
+    			((Fig)obj).dispose();
+    			needSave = true;
+    		}
+    	}
+    	
+    	setNeedsSave(needSave);	
+    }
+
+    public void moveFromTrash(Object obj) {
+        cat.debug("needs-more-work: not restoring " + obj);
+    }
+
+    public boolean isInTrash(Object dm) {
+        return Trash.SINGLETON.contains(dm);
     }
 
     ////////////////////////////////////////////////////////////////
-    // trash related methods
+    // usage statistics
 
-    /**
-     * Moves some object to trash, i.e. deletes it completely with all
-     * dependent structures. <p>
-     *
-     * Deleting an object involves: <pre>
-     * - Removing Target history
-     * - Deleting all Fig representations for the object
-     * - Deleting the UML element
-     * - Deleting all dependent UML modelelements
-     * - Deleting CommentEdges (which are not UML elements)
-     * - Move to trash for enclosed objects, i.e. graphically drawn on top of
-     * - Move to trash subdiagrams for the object
-     * - Saveguard that there is always at least 1 diagram left
-     * - If the current diagram has been deleted, select a new one to show
-     * - Trigger the explorer when a diagram is deleted
-     * - Set the needsSave (dirty) flag of the projectmanager
-     * </pre>
-     *
-     * @param obj The object to be deleted
-     * @see org.argouml.kernel.Project#trashInternal(Object)
-     */
-    public void moveToTrash(Object obj) {
-        if (trashcan.contains(obj)) {
-            return;
-        }
-        trashInternal(obj);
+    public static void resetStats() {
+        ToDoPane._clicksInToDoPane = 0;
+        ToDoPane._dblClicksInToDoPane = 0;
+        ToDoList._longestToDoList = 0;
+        Designer._longestAdd = 0;
+        Designer._longestHot = 0;
+        Critic._numCriticsFired = 0;
+        ToDoList._numNotValid = 0;
+        Agency._numCriticsApplied = 0;
+        ToDoPane._toDoPerspectivesChanged = 0;
+
+        NavigatorPane._navPerspectivesChanged = 0;
+        NavigatorPane._clicksInNavPane = 0;
+        FindDialog._numFinds = 0;
+        TabResults._numJumpToRelated = 0;
+        DesignIssuesDialog._numDecisionModel = 0;
+        GoalsDialog._numGoalsModel = 0;
+
+        CriticBrowserDialog._numCriticBrowser = 0;
+        NavigatorConfigDialog._numNavConfig = 0;
+        TabToDo._numHushes = 0;
+        ChecklistStatus._numChecks = 0;
+        SelectionWButtons.Num_Button_Clicks = 0;
+        ModeCreateEdgeAndNode.Drags_To_New = 0;
+        ModeCreateEdgeAndNode.Drags_To_Existing = 0;
     }
 
-    /**
-     * Removes some object from the project.
-     *
-     * @param obj the object to be thrown away
-     */
-    protected void trashInternal(Object obj) {
-        if (Model.getFacade().isAModel(obj)) {
-            return; //Can not delete the model
-        }
+    public static void setStat(String n, int v) {
+        //     String n = us.name;
+        //     int v = us.value;
+        cat.debug("setStat: " + n + " = " + v);
+        if (n.equals("clicksInToDoPane"))
+            ToDoPane._clicksInToDoPane = v;
+        else if (n.equals("dblClicksInToDoPane"))
+            ToDoPane._dblClicksInToDoPane = v;
+        else if (n.equals("longestToDoList"))
+            ToDoList._longestToDoList = v;
+        else if (n.equals("longestAdd"))
+            Designer._longestAdd = v;
+        else if (n.equals("longestHot"))
+            Designer._longestHot = v;
+        else if (n.equals("numCriticsFired"))
+            Critic._numCriticsFired = v;
+        else if (n.equals("numNotValid"))
+            ToDoList._numNotValid = v;
+        else if (n.equals("numCriticsApplied"))
+            Agency._numCriticsApplied = v;
+        else if (n.equals("toDoPerspectivesChanged"))
+            ToDoPane._toDoPerspectivesChanged = v;
 
-        if (obj != null) {
-            trashcan.add(obj);
-        }
-        if (Model.getFacade().isAModelElement(obj)) {
+        else if (n.equals("navPerspectivesChanged"))
+            NavigatorPane._navPerspectivesChanged = v;
+        else if (n.equals("clicksInNavPane"))
+            NavigatorPane._clicksInNavPane = v;
+        else if (n.equals("numFinds"))
+            FindDialog._numFinds = v;
+        else if (n.equals("numJumpToRelated"))
+            TabResults._numJumpToRelated = v;
+        else if (n.equals("numDecisionModel"))
+            DesignIssuesDialog._numDecisionModel = v;
+        else if (n.equals("numGoalsModel"))
+            GoalsDialog._numGoalsModel = v;
 
-            Model.getUmlFactory().delete(obj);
+        else if (n.equals("numCriticBrowser"))
+            CriticBrowserDialog._numCriticBrowser = v;
+        else if (n.equals("numNavConfig"))
+            NavigatorConfigDialog._numNavConfig = v;
+        else if (n.equals("numHushes"))
+            TabToDo._numHushes = v;
+        else if (n.equals("numChecks"))
+            ChecklistStatus._numChecks = v;
 
-            if (obj instanceof ProjectMember
-                    && members.contains(obj)) {
-                // TODO: Bob says - can this condition ever be reached?
-                // Surely obj cannot be both a model element (previous if) and
-                // a ProjectMember (this if)
-                members.remove(obj);
-            }
+        else if (n.equals("Num_Button_Clicks"))
+            SelectionWButtons.Num_Button_Clicks = v;
+        else if (n.equals("Drags_To_New"))
+            ModeCreateEdgeAndNode.Drags_To_New = v;
+        else if (n.equals("Drags_To_Existing"))
+            ModeCreateEdgeAndNode.Drags_To_Existing = v;
 
-            // TODO: Presumably this is only relevant if 
-            // obj is actually a Model.
-            // An added test of Model.getFacade.isAModel(obj) would clarify what
-            // is going on here.
-            if (models.contains(obj)) {
-                models.remove(obj);
-            }
-        } else if (obj instanceof ArgoDiagram) {
-            TargetManager.getInstance().removeTarget(obj);
-            TargetManager.getInstance().removeHistoryElement(obj);
-            removeProjectMemberDiagram((ArgoDiagram) obj);
-            // only need to manually delete diagrams because they
-            // don't have a decent event system set up.
-            ExplorerEventAdaptor.getInstance().modelElementRemoved(obj);
-        } else if (obj instanceof Fig) {
-            TargetManager.getInstance().removeTarget(obj);
-            TargetManager.getInstance().removeHistoryElement(obj);
-            ((Fig) obj).deleteFromModel();
-            // TODO: Bob says - I've never seen this appear in the log.
-            // I believe this code is never reached. If we delete a FigEdge
-            // or FigNode we actually call this method with the owner not
-            // the Fig itself.
-            // For Figs with no owner (primitives like circle etc) then they
-            // are not deleted (crtl-Del) they are removed (Del)
-            LOG.error("Request to delete a Fig " + obj.getClass().getName());
-        } else if (obj instanceof CommentEdge) {
-            TargetManager.getInstance().removeTarget(obj);
-            TargetManager.getInstance().removeHistoryElement(obj);
-            CommentEdge ce = (CommentEdge) obj;
-            LOG.info("Removing the link from " + ce.getAnnotatedElement() 
-                    + " to " + ce.getComment());
-            Model.getCoreHelper().removeAnnotatedElement(
-                    ce.getComment(), ce.getAnnotatedElement());
+        else {
+            cat.warn("unknown UsageStatistic: " + n);
         }
     }
 
-    /**
-     * @param obj the object
-     * @return true if the object is trashed
-     */
-    public boolean isInTrash(Object obj) {
-        return trashcan.contains(obj);
+    public static Vector getStats() {
+        Vector s = new Vector();
+        addStat(s, "clicksInToDoPane", ToDoPane._clicksInToDoPane);
+        addStat(s, "dblClicksInToDoPane", ToDoPane._dblClicksInToDoPane);
+        addStat(s, "longestToDoList", ToDoList._longestToDoList);
+        addStat(s, "longestAdd", Designer._longestAdd);
+        addStat(s, "longestHot", Designer._longestHot);
+        addStat(s, "numCriticsFired", Critic._numCriticsFired);
+        addStat(s, "numNotValid", ToDoList._numNotValid);
+        addStat(s, "numCriticsApplied", Agency._numCriticsApplied);
+        addStat(s, "toDoPerspectivesChanged", ToDoPane._toDoPerspectivesChanged);
+
+        addStat(s, "navPerspectivesChanged",
+                NavigatorPane._navPerspectivesChanged);
+        addStat(s, "clicksInNavPane", NavigatorPane._clicksInNavPane);
+        addStat(s, "numFinds", FindDialog._numFinds);
+        addStat(s, "numJumpToRelated", TabResults._numJumpToRelated);
+        addStat(s, "numDecisionModel", DesignIssuesDialog._numDecisionModel);
+        addStat(s, "numGoalsModel", GoalsDialog._numGoalsModel);
+        addStat(s, "numCriticBrowser", CriticBrowserDialog._numCriticBrowser);
+        addStat(s, "numNavConfig", NavigatorConfigDialog._numNavConfig);
+        addStat(s, "numHushes", TabToDo._numHushes);
+        addStat(s, "numChecks", ChecklistStatus._numChecks);
+
+        addStat(s, "Num_Button_Clicks", SelectionWButtons.Num_Button_Clicks);
+        addStat(s, "Drags_To_New", ModeCreateEdgeAndNode.Drags_To_New);
+        addStat(s, "Drags_To_Existing", ModeCreateEdgeAndNode.Drags_To_Existing);
+
+        return s;
     }
 
-    /**
-     * @param theDefaultModel a uml model
-     */
-    public void setDefaultModel(Object theDefaultModel) {
-
-        if (!Model.getFacade().isAModel(theDefaultModel)) {
-            throw new IllegalArgumentException(
-                    "The default model must be a Model type. Received a "
-                    + theDefaultModel.getClass().getName());
-        }
-
-        defaultModel = theDefaultModel;
-        defaultModelTypeCache = new HashMap();
-    }
-
-    /**
-     * Get the default model.
-     *
-     * @return A model.
-     */
-    public Object getDefaultModel() {
-        return defaultModel;
-    }
-
-    /**
-     * Find a type by name in the default model.
-     *
-     * @param name the name.
-     * @return the type.
-     */
-    public Object findTypeInDefaultModel(String name) {
-        if (defaultModelTypeCache.containsKey(name)) {
-            return defaultModelTypeCache.get(name);
-        }
-
-        Object result = findTypeInModel(name, getDefaultModel());
-        defaultModelTypeCache.put(name, result);
-        return result;
-    }
-
-    /**
-     * Returns the root.
-     * @return MModel
-     */
-    public Object getRoot() {
-        return Model.getModelManagementFactory().getRootModel();
-    }
-
-    /**
-     * Sets the root.
-     * @param root The root to set, a uml model
-     */
-    public void setRoot(Object root) {
-
-        if (root == null) {
-            throw new IllegalArgumentException("A root model element is required");
-        }
-        if (!Model.getFacade().isAModel(root)) {
-            throw new IllegalArgumentException("The root model element must be a model - got " + root.getClass().getName());
-        }
-
-        Object treeRoot = Model.getModelManagementFactory().getRootModel();
-        if (treeRoot != null) {
-            models.remove(treeRoot);
-        }
-        Model.getModelManagementFactory().setRootModel(root);
-        addModel(root);
-    }
-
-    /**
-     * Returns true if the given name is a valid name for a diagram. Valid means
-     * that it does not occur as a name for a diagram yet.
-     * @param name The name to test
-     * @return boolean True if there are no problems with this name, false if
-     * it's not valid.
-     */
-    public boolean isValidDiagramName(String name) {
-        Iterator it = diagrams.iterator();
-        boolean rv = true;
-        while (it.hasNext()) {
-            ArgoDiagram diagram = (ArgoDiagram) it.next();
-            if (diagram.getName().equals(name)) {
-                rv = false;
-                break;
-            }
-        }
-        return rv;
-    }
-
-    /**
-     * Returns the searchpath.
-     * @return Vector
-     */
-    public Vector getSearchpath() {
-        return searchpath;
-    }
-
-    /**
-     * Returns the uri.
-     * @return URI
-     */
-    public URI getUri() {
-        return uri;
-    }
-
-    /**
-     * Returns the uUIDRefs.
-     * @return HashMap
-     */
-    public HashMap getUUIDRefs() {
-        return uuidRefs;
-    }
-
-    /**
-     * Sets the searchpath.
-     * @param theSearchpath The searchpath to set
-     */
-    public void setSearchpath(Vector theSearchpath) {
-        this.searchpath = theSearchpath;
-    }
-
-    /**
-     * Sets the uUIDRefs.
-     * @param uUIDRefs The uUIDRefs to set
-     */
-    public void setUUIDRefs(HashMap uUIDRefs) {
-        uuidRefs = uUIDRefs;
-    }
-
-    /**
-     * Sets the vetoSupport.
-     * @param theVetoSupport The vetoSupport to set
-     */
-    public void setVetoSupport(VetoableChangeSupport theVetoSupport) {
-        this.vetoSupport = theVetoSupport;
-    }
-
-    /**
-     * Get the current viewed diagram.
-     *
-     * @return the current viewed diagram
-     */
-    public ArgoDiagram getActiveDiagram() {
-        return activeDiagram;
-    }
-
-    /**
-     * @param theDiagram the ArgoDiagram
-     */
-    public void setActiveDiagram(ArgoDiagram theDiagram) {
-        activeDiagram = theDiagram;
-    }
-
-    /**
-     * @see TargetListener#targetAdded(TargetEvent)
-     */
-    public void targetAdded(TargetEvent e) {
-    	setTarget(e.getNewTarget());
-    }
-
-    /**
-     * @see TargetListener#targetRemoved(TargetEvent)
-     */
-    public void targetRemoved(TargetEvent e) {
-    	setTarget(e.getNewTarget());
-    }
-
-    /**
-     * @see TargetListener#targetSet(TargetEvent)
-     */
-    public void targetSet(TargetEvent e) {
-    	setTarget(e.getNewTarget());
-    }
-
-    /**
-     * Called to update the current namespace and active diagram after
-     * the target has changed.
-     *
-     * TODO: The parameter is not used. Why?
-     * @param target Not used.
-     */
-    private void setTarget(Object target) {
-        Object theCurrentNamespace = null;
-        target = TargetManager.getInstance().getModelTarget();
-        if (target instanceof UMLDiagram) {
-            theCurrentNamespace = ((UMLDiagram) target).getNamespace();
-        } else if (Model.getFacade().isANamespace(target)) {
-            theCurrentNamespace = target;
-        } else if (Model.getFacade().isAModelElement(target)) {
-            theCurrentNamespace = Model.getFacade().getNamespace(target);
-        } else {
-            theCurrentNamespace = getRoot();
-        }
-        setCurrentNamespace(theCurrentNamespace);
-
-        if (target instanceof ArgoDiagram) {
-            activeDiagram = (ArgoDiagram) target;
-        }
-    }
-
-    /**
-     * Remove the project.
-     */
-    public void remove() {
-
-        if (diagrams != null) {
-            for (Iterator it = diagrams.iterator(); it.hasNext();) {
-                Diagram diagram = (Diagram) it.next();
-                diagram.remove();
-            }
-        }
-        
-        if (members != null) {
-            members.clear();
-        }
-
-        if (models != null) {
-            for (Iterator it = models.iterator(); it.hasNext();) {
-                Object model = it.next();
-                LOG.debug("Deleting project model " 
-                        + Model.getFacade().getName(model));
-                Model.getUmlFactory().delete(model);
-            }
-            models.clear();
-        }
-        
-        if (defaultModel != null) {
-            LOG.debug("Deleting profile model " 
-                    + Model.getFacade().getName(defaultModel));
-            Model.getUmlFactory().delete(defaultModel);
-            defaultModel = null;
-        }
-
-        if (diagrams != null) {
-            diagrams.clear();
-        }
-
-        if (uuidRefs != null) {
-            uuidRefs.clear();
-        }
-
-        if (defaultModelTypeCache != null) {
-            defaultModelTypeCache.clear();
-        }
-
-        members = null;
-        models = null;
-        diagrams = null;
-        uuidRefs = null;
-        defaultModelTypeCache = null;
-
-        uri = null;
-        authorname = null;
-        authoremail = null;
-        description = null;
-        version = null;
-        searchpath = null;
-        historyFile = null;
-        defaultModel = null;
-        currentNamespace = null;
-        cgPrefs = null;
-        vetoSupport = null;
-        activeDiagram = null;
-
-        TargetManager.getInstance().removeTargetListener(this);
-        trashcan.clear();
-    }
-
-    /**
-     * @return Returns the persistenceVersion.
-     */
-    public int getPersistenceVersion() {
-        return persistenceVersion;
-    }
-
-    /**
-     * @param pv The persistenceVersion to set.
-     */
-    public void setPersistenceVersion(int pv) {
-        persistenceVersion = pv;
-    }
-
-    /**
-     * @return Returns the profile.
-     */
-    public Profile getProfile() {
-        return profile;
+    public static void addStat(Vector stats, String name, int value) {
+        stats.addElement(new UsageStatistic(name, value));
     }
     
-    /**
-     * Repair all parts of the project before a save takes place.
-     * @return a report of any fixes
-     */
-    public String repair() {
-        String report = "";
-        Iterator it = members.iterator();
-        while (it.hasNext()) {
-            ProjectMember member = (ProjectMember) it.next();
-            report += member.repair();
-        }
-        return report;
+    public void setDefaultModel(MModel defaultModel) {
+    	_defaultModel = defaultModel;
+    }
+    
+    public MModel getDefaultModel() {
+    	return _defaultModel;
     }
 
-    /**
-     * @return the settings of this project
-     */
-    public ProjectSettings getProjectSettings() {
-        return projectSettings;
-    }
+    static final long serialVersionUID = 1399111233978692444L;
 
 } /* end class Project */
+
+
+class ResetStatsLater implements Runnable {
+  public void run() {
+    Project.resetStats();
+  }
+} /* end class ResetStatsLater */
